--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
+            "php -r \"copy('.env.dev', '.env');\""
         ]
     },
     "minimum-stability": "dev",
